--- a/app/GasConsumo/www/templates/resultados.html
+++ b/app/GasConsumo/www/templates/resultados.html
@@ -1,15 +1,19 @@
-<div>
-    <h2>Resultados</h2>
-    <table>
-        <tr><td>Tiempo de recorrido (m): </td><td>{{result.tiempo}}</td></tr>
-        <tr><td>Kilometros recorridos (km): </td><td>{{result.distancia}}</td></tr>
-        <tr><td>Automovil: </td>
-        <select ng-model="automovil" ng-change="loadAutomovil(automovil)">
-            <option value="" ></option>
-            <option ng-repeat="option in favoritos" value="{{option.value}}">{{option.text}}</option>
-        </select>
-        </tr>
-        <tr><td>Gasolina requerida (lt): </td><td>{{result.litrosGasolina}}</td></tr>
-    </table>
-    <p>*El uso de gasolina es estimado y puede diferir con el consumo real</p>
+<div class="modal-body" id="naranja">
+    <div class="modal-token" style="align-items:center">
+        <h2>Resultados</h2>
+        <table>
+            <tr>
+                <td>Automovil: </td>
+                <td><select ng-model="automovil" ng-change="loadAutomovil()" class="browser-default">
+                        <option value="" ></option>
+                        <option ng-repeat="option in favoritos" value="{{option.nombre}}">{{option.nombre}}</option>
+                    </select>
+                </td>
+            </tr>
+            <tr><td>Tiempo de recorrido (m): </td><td>{{result.tiempo}}</td></tr>
+            <tr><td>Kilometros recorridos (km): </td><td>{{result.distancia}}</td></tr>
+            <tr><td>Gasolina requerida (lt): </td><td><b>{{result.litrosGasolina}}</b></td></tr>
+        </table>
+        <p style="text-align: right">*El uso de gasolina es estimado y puede diferir con el consumo real</p>
+    </div>
 </div>
