--- a/app/GasConsumo/www/templates/mapa.html
+++ b/app/GasConsumo/www/templates/mapa.html
@@ -9,11 +9,7 @@
            padding-top: 7px;" ng-model="address" ng-click="openBuscador()" placeholder="buscar...">
    
 </div>
-<div style="
-    z-index: 100;
-    position: absolute;
-    
-margin-top: 125%;">
+<div class="menuButton">
     <button ng-click="clearMap()" class="button-icon"><i class="small material-icons">delete</i></button>
     <button ng-click="localizar()" class="button-icon"><i class="small material-icons">my_location</i></button>
     <button ng-click="calcular()" class="button-icon"><i class="small material-icons">done</i></button>
